Updated Candidate routing and created add candidate button

--- a/cms-frontend/src/App.css
+++ b/cms-frontend/src/App.css
@@ -30,8 +30,13 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: black;
     text-align: center;
     color: white;
+}
+
+.addcandidate {
+    float: right;
+    margin-bottom: 10px;
 }
